[package]
name = "randomx-rs"
description = "Rust bindings for the RandomX Proof-of-Work"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/randomx-rs"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "1.3.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Create a dynamic library for C usage and a rust library so it can be called from rust
crate-type = ["cdylib", "lib"]

[dependencies]
libc = { version = "0.2.174", default-features = false }
bitflags = { version = "2.9.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["std"]
std = ["libc/std", "thiserror/std", "bitflags/std"]

[dev-dependencies]
hex = "0.4.3"
quickcheck = "1"
